--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
             Source Codes: <a href="https://bitbucket.org/ashotpahlevanyan/simpleslot/" class="bitbucket">BitBucket Url</a>
         </div>
     </footer>
+<script type='text/javascript' src="./js/util.js"></script>
 <script type='text/javascript' src="./js/index.js"></script>
 </body>
 </html>
